# tempcap

./: Cargo.toml  arduino.dht11.out  out.txt
src/: main.rs
